// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brackets.js-flow 1`] = `
"import {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
} from '.';
import {fitsIn, oneLine} from '.';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
} from \\".\\";
import { fitsIn, oneLine } from \\".\\";
"
`;

exports[`brackets.js-flow 2`] = `
"import {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
} from '.';
import {fitsIn, oneLine} from '.';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
} from \\".\\";
import {fitsIn, oneLine} from \\".\\";
"
`;

exports[`brackets.js-typescript 1`] = `
"import {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
} from '.';
import {fitsIn, oneLine} from '.';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
} from \\".\\";
import { fitsIn, oneLine } from \\".\\";
"
`;

exports[`brackets.js-typescript 2`] = `
"import {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
} from '.';
import {fitsIn, oneLine} from '.';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {
  runTaskForChanged,
  description,
  someOtherLabel,
  thatMakes,
  itGo,
  multiLine,
  andMore,
  soWeCanGetItTo80Columns
} from \\".\\";
import {fitsIn, oneLine} from \\".\\";
"
`;

exports[`comments.js-flow 1`] = `
"import { a //comment1
//comment2
//comment3
as b} from \\"\\";

import {
  a as //comment1
  //comment2
  //comment3
  b
} from \\"\\";

import {
  a as //comment2 //comment1
  //comment3
  b
} from \\"\\";

import {
  a as //comment3 //comment2 //comment1
  b
} from \\"\\";

import {
  // comment 1
  FN1, // comment 2
  /* comment 3 */ FN2,
  // FN3,
  FN4 /* comment 4 */
  // FN4,
  // FN5
} from \\"./module\\";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {
  //comment1
  //comment2
  //comment3
  a as b
} from \\"\\";

import {
  //comment1
  //comment2
  //comment3
  a as b
} from \\"\\";

import {
  //comment2 //comment1
  //comment3
  a as b
} from \\"\\";

import {
  //comment3 //comment2 //comment1
  a as b
} from \\"\\";

import {
  // comment 1
  FN1, // comment 2
  /* comment 3 */ FN2,
  // FN3,
  FN4 /* comment 4 */
  // FN4,
  // FN5
} from \\"./module\\";
"
`;

exports[`comments.js-flow 2`] = `
"import { a //comment1
//comment2
//comment3
as b} from \\"\\";

import {
  a as //comment1
  //comment2
  //comment3
  b
} from \\"\\";

import {
  a as //comment2 //comment1
  //comment3
  b
} from \\"\\";

import {
  a as //comment3 //comment2 //comment1
  b
} from \\"\\";

import {
  // comment 1
  FN1, // comment 2
  /* comment 3 */ FN2,
  // FN3,
  FN4 /* comment 4 */
  // FN4,
  // FN5
} from \\"./module\\";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {
  //comment1
  //comment2
  //comment3
  a as b
} from \\"\\";

import {
  //comment1
  //comment2
  //comment3
  a as b
} from \\"\\";

import {
  //comment2 //comment1
  //comment3
  a as b
} from \\"\\";

import {
  //comment3 //comment2 //comment1
  a as b
} from \\"\\";

import {
  // comment 1
  FN1, // comment 2
  /* comment 3 */ FN2,
  // FN3,
  FN4 /* comment 4 */
  // FN4,
  // FN5
} from \\"./module\\";
"
`;

exports[`comments.js-typescript 1`] = `
"import { a //comment1
//comment2
//comment3
as b} from \\"\\";

import {
  a as //comment1
  //comment2
  //comment3
  b
} from \\"\\";

import {
  a as //comment2 //comment1
  //comment3
  b
} from \\"\\";

import {
  a as //comment3 //comment2 //comment1
  b
} from \\"\\";

import {
  // comment 1
  FN1, // comment 2
  /* comment 3 */ FN2,
  // FN3,
  FN4 /* comment 4 */
  // FN4,
  // FN5
} from \\"./module\\";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {
  //comment1
  //comment2
  //comment3
  a as b
} from \\"\\";

import {
  //comment1
  //comment2
  //comment3
  a as b
} from \\"\\";

import {
  //comment2 //comment1
  //comment3
  a as b
} from \\"\\";

import {
  //comment3 //comment2 //comment1
  a as b
} from \\"\\";

import {
  // comment 1
  FN1, // comment 2
  /* comment 3 */ FN2,
  // FN3,
  FN4 /* comment 4 */
  // FN4,
  // FN5
} from \\"./module\\";
"
`;

exports[`comments.js-typescript 2`] = `
"import { a //comment1
//comment2
//comment3
as b} from \\"\\";

import {
  a as //comment1
  //comment2
  //comment3
  b
} from \\"\\";

import {
  a as //comment2 //comment1
  //comment3
  b
} from \\"\\";

import {
  a as //comment3 //comment2 //comment1
  b
} from \\"\\";

import {
  // comment 1
  FN1, // comment 2
  /* comment 3 */ FN2,
  // FN3,
  FN4 /* comment 4 */
  // FN4,
  // FN5
} from \\"./module\\";
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import {
  //comment1
  //comment2
  //comment3
  a as b
} from \\"\\";

import {
  //comment1
  //comment2
  //comment3
  a as b
} from \\"\\";

import {
  //comment2 //comment1
  //comment3
  a as b
} from \\"\\";

import {
  //comment3 //comment2 //comment1
  a as b
} from \\"\\";

import {
  // comment 1
  FN1, // comment 2
  /* comment 3 */ FN2,
  // FN3,
  FN4 /* comment 4 */
  // FN4,
  // FN5
} from \\"./module\\";
"
`;

exports[`long-line.js-flow 1`] = `
"import someCoolUtilWithARatherLongName from '../../../../utils/someCoolUtilWithARatherLongName';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import someCoolUtilWithARatherLongName
  from \\"../../../../utils/someCoolUtilWithARatherLongName\\";
"
`;

exports[`long-line.js-flow 2`] = `
"import someCoolUtilWithARatherLongName from '../../../../utils/someCoolUtilWithARatherLongName';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import someCoolUtilWithARatherLongName
  from \\"../../../../utils/someCoolUtilWithARatherLongName\\";
"
`;

exports[`long-line.js-typescript 1`] = `
"import someCoolUtilWithARatherLongName from '../../../../utils/someCoolUtilWithARatherLongName';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import someCoolUtilWithARatherLongName
  from \\"../../../../utils/someCoolUtilWithARatherLongName\\";
"
`;

exports[`long-line.js-typescript 2`] = `
"import someCoolUtilWithARatherLongName from '../../../../utils/someCoolUtilWithARatherLongName';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import someCoolUtilWithARatherLongName
  from \\"../../../../utils/someCoolUtilWithARatherLongName\\";
"
`;

exports[`multiple_standalones.js-flow 1`] = `
"import a, * as b from 'a';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import a, * as b from \\"a\\";
"
`;

exports[`multiple_standalones.js-flow 2`] = `
"import a, * as b from 'a';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import a, * as b from \\"a\\";
"
`;

exports[`multiple_standalones.js-typescript 1`] = `
"import a, * as b from 'a';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import a, * as b from \\"a\\";
"
`;

exports[`multiple_standalones.js-typescript 2`] = `
"import a, * as b from 'a';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import a, * as b from \\"a\\";
"
`;
